@startuml
title UML Class Diagram - TG Build Bot (Pilot: polling/webhook + queue + explicit confirmation)

skinparam classAttributeIconSize 0
hide circle

package "Config" {
  class Settings {
    +app: AppSettings
    +telegram: TelegramSettings
    +webhook: WebhookSettings
    +llm: LLMSettings
    +dictionaries: DictionarySettings
    +google_sheets: GoogleSheetsSettings
    +queue: QueueSettings
    +logging: LoggingSettings
    +validate_for_polling(): void
    +validate_for_full_pipeline(): void
    +validate_for_webhook(): void
  }

  class AppSettings {
    +env: str
    +classifier_version: str
    +startup_preflight_enabled: bool
  }

  class TelegramSettings {
    +bot_token: str
    +polling_timeout_seconds: int
    +poll_interval_seconds: float
    +allowed_updates: list[str]
  }

  class WebhookSettings {
    +listen_host: str
    +listen_port: int
    +path: str
    +public_base_url: str
    +secret_token: str
    +drop_pending_updates: bool
    +max_connections: int
  }

  class LLMSettings {
    +base_url: str
    +api_key: str
    +model: str
    +timeout_seconds: int
    +preflight_enabled: bool
  }

  class DictionarySettings {
    +directory: Path
    +work_types_file: Path
    +stages_file: Path
    +functions_file: Path
    +units_file: Path
  }

  class GoogleSheetsSettings {
    +service_account_file: Path
    +spreadsheet_id: str
    +worksheet_name: str
    +dashboard_archive_dir: Path
  }

  class QueueSettings {
    +db_path: Path
    +poll_interval_seconds: int
  }

  class LoggingSettings {
    +level: str
    +json: bool
    +file_path: Path
    +max_bytes: int
    +backup_count: int
    +raw_text_preview_enabled: bool
  }
}

package "Presentation" {
  class TelegramPollingHandler {
    +register(application: Application): void
    +start_command(update: Update, context): void
    +report_execution_callback(update: Update, context): void
    +free_text_handler(update: Update, context): void
    +confirm_record_callback(update: Update, context): void
    +edit_record_callback(update: Update, context): void
    +cancel_record_callback(update: Update, context): void
    +error_handler(update: object, context): void
  }

  class NotificationService {
    +send_welcome(target_message: Message, reply_markup): void
    +send_help(target_message: Message, reply_markup): void
    +send_input_instruction(target_message: Message, reply_markup, prefix_text): void
    +send_confirmation_request(target_message: Message, classification_payload: dict, status: str, reply_markup): void
    +send_queued_notice(target_message: Message): void
    +send_processing_error(target_message: Message): void
    +send_post_factum_confirmation_request(bot: Bot, chat_id: str, user_id: str, message_id: str, classification_payload: dict, status: str, reply_markup): void
    +send_record_saved(target_message: Message, classification_payload: dict, status: str, reply_markup): void
    +send_pending_cancelled(target_message: Message, reply_markup): void
  }
}

package "Application" {
  class MessagePreprocessor {
    +normalize(text: str): str
  }

  class ClassificationOrchestrator {
    +classify(raw_text: str, normalized_text: str?, meta: TelegramMessageMeta): ClassificationRunResult
    +classify_from_queue(raw_text: str, normalized_text: str?, meta: TelegramMessageMeta): ClassificationRunResult
    +persist_record(record: DataFactRecord): void
  }

  class PromptBuilder {
    +build(raw_text: str, dictionary: ClassificationDictionary): str
    +build_stage_function_hint(): str
  }

  class JsonSchemaValidator {
    +validate(result_json: str, dictionary: ClassificationDictionary?): ValidationResult
  }

  class ValidationResult {
    +is_valid: bool
    +errors: tuple[str]
    +payload: dict
  }

  class LLMPayloadNormalizer {
    +normalize(result_json: str, dictionary: ClassificationDictionary?): PayloadNormalizationResult
  }

  class PayloadNormalizationResult {
    +normalized_json: str
    +notes: tuple[str]
  }

  class FallbackMapper {
    +map_invalid(raw_llm_response: str, validation_errors: tuple[str], normalization_notes: tuple[str]): ClassificationResult
  }

  class QueueWorker {
    +run_forever(bot: Bot): void
    +process_once(bot: Bot): bool
  }

  class StartupPreflight {
    +run(): StartupPreflightResult
  }

  class StartupPreflightResult {
    +dictionary_version: str
    +work_types_count: int
    +stages_count: int
    +functions_count: int
    +units_count: int
    +llm_model: str
    +llm_preflight_enabled: bool
    +llm_preflight_timeout_seconds: int
    +worksheet_name: str
    +header_count: int
  }
}

package "Domain" {
  class TelegramMessageMeta {
    +user_id: str
    +chat_id: str
    +message_id: str
    +timestamp: datetime
  }

  class ClassificationResult {
    +volume: Decimal?
    +unit: str?
    +work_type: str?
    +stage: str?
    +function: str?
    +comment: str?
    +as_json_dict(): dict
  }

  class AuditFields {
    +timestamp: datetime
    +user_id: str
    +chat_id: str
    +message_id: str
    +model: str
    +classifier_version: str
    +status: ProcessingStatus
  }

  class DataFactRecord {
    +raw_text: str
    +classification: ClassificationResult
    +audit: AuditFields
  }

  class ClassificationRunResult {
    +record: DataFactRecord
    +llm_raw_response: str
    +dictionary_version: str
  }

  class PendingConfirmation {
    +confirmation_id: str
    +record: DataFactRecord
    +created_at: datetime
  }

  class QueueTask {
    +queue_id: int?
    +user_id: str
    +chat_id: str
    +message_id: str
    +raw_text: str
    +normalized_text: str?
    +received_at: datetime
    +enqueued_at: datetime
    +attempt_count: int
    +next_attempt_at: datetime
  }

  enum ProcessingStatus {
    RECEIVED
    QUEUED
    PROCESSED
    PROCESSED_WITH_FALLBACK
    PROCESSED_FROM_QUEUE
    PROCESSED_FROM_QUEUE_FALLBACK
  }
}

package "Infrastructure" {
  class ClassificationDictionary {
    +work_types: tuple[str]
    +stages: tuple[str]
    +functions: tuple[str]
    +units: tuple[str]
    +unit_descriptions: dict[str, str]
    +version: str
  }

  class DictionaryRepository {
    +load_from_text_files(): ClassificationDictionary
    +preflight_check(): ClassificationDictionary
  }

  class GeminiClient {
    +model: str
    +classify(prompt: str, timeout_seconds: int): str
    +preflight_check(timeout_seconds: int?): dict
  }

  class LLMTimeoutError

  class GoogleSheetsRepository {
    +append_data_fact(record: DataFactRecord): AppendResult
    +preflight_check(): dict
  }

  class AppendResult {
    +updated_range: str?
  }

  class QueueRepository {
    +enqueue(task: QueueTask): int
    +dequeue(): QueueTask?
    +mark_done(queue_id: int): void
    +requeue(queue_id: int, error: str): RequeueResult
    +size(): int
  }

  class RequeueResult {
    +queue_id: int
    +attempt_count: int
    +next_attempt_at: datetime
    +retry_delay_seconds: int
  }

  class PendingConfirmationRepository {
    +create(record: DataFactRecord): PendingConfirmation
    +get(confirmation_id: str): PendingConfirmation?
    +delete(confirmation_id: str): bool
  }
}

package "Observability" {
  class CorrelationIdFactory {
    +build_trace_id(chat_id: str, message_id: str): str
  }

  class LogContext {
    +trace_id: str
    +chat_id: str
    +user_id: str
    +message_id: str
    +processing_path: str
    +status: str
  }

  enum LogEvent {
    polling_started
    webhook_started
    queue_worker_bootstrap_started
    queue_worker_started
    startup_preflight_started
    startup_preflight_passed
    startup_preflight_failed
    message_received
    llm_response_received
    llm_timeout
    json_validation_passed
    json_validation_failed
    queue_enqueued
    queue_enqueue_failed
    queue_dequeued
    queue_task_invalid
    queue_processing_failed
    sheets_write_success
    sheets_write_failed
    post_factum_notification_sent
    classification_failed
    telegram_update_error
  }

  class LoggingService {
    +info(event: LogEvent, component: str, context: LogContext, payload: dict): void
    +warning(event: LogEvent, component: str, context: LogContext, payload: dict): void
    +error(event: LogEvent, component: str, context: LogContext, payload: dict): void
  }
}

Settings *-- AppSettings
Settings *-- TelegramSettings
Settings *-- WebhookSettings
Settings *-- LLMSettings
Settings *-- DictionarySettings
Settings *-- GoogleSheetsSettings
Settings *-- QueueSettings
Settings *-- LoggingSettings

TelegramPollingHandler --> NotificationService
TelegramPollingHandler --> MessagePreprocessor
TelegramPollingHandler --> ClassificationOrchestrator
TelegramPollingHandler --> QueueRepository
TelegramPollingHandler --> PendingConfirmationRepository
TelegramPollingHandler --> LoggingService
TelegramPollingHandler --> CorrelationIdFactory

QueueWorker --> QueueRepository
QueueWorker --> PendingConfirmationRepository
QueueWorker --> ClassificationOrchestrator
QueueWorker --> NotificationService
QueueWorker --> LoggingService
QueueWorker --> CorrelationIdFactory

ClassificationOrchestrator --> DictionaryRepository
ClassificationOrchestrator --> GeminiClient
ClassificationOrchestrator --> GoogleSheetsRepository
ClassificationOrchestrator --> PromptBuilder
ClassificationOrchestrator --> JsonSchemaValidator
ClassificationOrchestrator --> LLMPayloadNormalizer
ClassificationOrchestrator --> FallbackMapper
ClassificationOrchestrator --> LoggingService
ClassificationOrchestrator --> CorrelationIdFactory
ClassificationOrchestrator --> TelegramMessageMeta
ClassificationOrchestrator --> ClassificationRunResult

StartupPreflight --> DictionaryRepository
StartupPreflight --> GeminiClient
StartupPreflight --> GoogleSheetsRepository
StartupPreflight --> LoggingService
StartupPreflight --> StartupPreflightResult

PromptBuilder --> ClassificationDictionary
JsonSchemaValidator --> ValidationResult
JsonSchemaValidator --> ClassificationDictionary
LLMPayloadNormalizer --> ClassificationDictionary
LLMPayloadNormalizer --> PayloadNormalizationResult
FallbackMapper --> ClassificationResult

DictionaryRepository --> DictionarySettings
DictionaryRepository --> ClassificationDictionary
GeminiClient ..> LLMTimeoutError
GoogleSheetsRepository --> GoogleSheetsSettings
GoogleSheetsRepository --> AppendResult
GoogleSheetsRepository --> LoggingService
GoogleSheetsRepository --> CorrelationIdFactory
QueueRepository --> QueueSettings
QueueRepository --> RequeueResult
PendingConfirmationRepository --> QueueSettings
PendingConfirmationRepository --> PendingConfirmation

DataFactRecord *-- ClassificationResult
DataFactRecord *-- AuditFields
ClassificationRunResult *-- DataFactRecord
PendingConfirmation *-- DataFactRecord
AuditFields --> ProcessingStatus

NotificationService --> LoggingService
NotificationService --> CorrelationIdFactory
LoggingService --> LogEvent
LoggingService --> LogContext

note right of TelegramPollingHandler
  The same handler is registered by both
  main_polling.py and main_webhook.py.
  It owns the Confirm / Edit / Cancel callbacks.
end note

note right of ClassificationOrchestrator
  Orchestrator flow:
  dictionaries -> prompt -> Gemini -> normalize
  -> schema validation -> valid/fallback DataFactRecord.
  Persistence to Google Sheets is separate and happens
  only after explicit user confirmation.
end note

note right of QueueWorker
  Queue worker does not write to Google Sheets directly.
  It creates a pending confirmation, sends a post-factum
  card, and only then marks the queue task done.
end note

@enduml
